--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
 	"require":{
 		"infrajs/excel":"~1",
 		"infrajs/load":"~1",
+		"akiyatkin/goal":"~1",
 		"infrajs/layer-autosave":"~1",
 		"infrajs/layer-onsubmit":"~1",
 		"infrajs/layer-config":"~1"
