--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
 		"akiyatkin/goal":"~1",
 		"infrajs/layer-autosave":"~1",
 		"infrajs/layer-onsubmit":"~1",
-		"infrajs/layer-config":"~1"
+		"infrajs/layer-config":"~1",
+		"narical/grayscale":"~1"
 	}
 }
